--- a/_includes/head.html
+++ b/_includes/head.html
@@ -61,7 +61,7 @@
     <meta name="msapplication-square310x310logo" content="largetile.png" />
 
     <!-- Android Lolipop Theme Color -->
-    <meta name="theme-color" content="#5d4d7a">
+    <meta name="theme-color" content="#32c9b3">
 
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
