--- a/_includes/header-default.html
+++ b/_includes/header-default.html
@@ -32,9 +32,11 @@
                 <svg class="icon icon-linkedin"><use xlink:href="#icon-linkedin"></use></svg>
             </a>
 
+            <!--
             <a aria-label="My HackerRank" title="Show my hackerrank profile" target="_blank" href="https://www.hackerrank.com/{{site.hackerrank_username}}">
                 <svg class="icon icon-hackerrank"><use xlink:href="#icon-hackerrank"></use></svg>
             </a>
+            -->
 
             <a aria-label="My Jupyter Community" title="Show my jupyter community profile" target="_blank" href="https://discourse.jupyter.org/u/{{site.jupyter_username}}">
                 <svg class="icon icon-jupyter"><use xlink:href="#icon-jupyter"></use></svg>
@@ -42,6 +44,14 @@
 
             <a aria-label="My LeetCode" title="Show my leetcode profile" taget="_blank" href="https://leetcode-cn.com/u/{{site.leetcode_username}}/">
                 <svg class="icon icon-leetcode"><use xlink:href="#icon-leetcode"></use></svg>
+            </a>
+
+            <a aria-label="My OSChina Blog" title="Show my OSChina Blog" target="_blank" href="https://my.oschina.net/u/{{site.oschina_id}}">
+                <svg class="icon icon-oschina"><use xlink:href="#icon-oschina"></use></svg>
+            </a>
+
+            <a aria-label="My Devto Blog" title="Show my Devto Blog" target="_blank" href="https://dev.to/{{site.devto_username}}">
+                <svg class="icon icon-dev-to"><use xlink:href="#icon-dev-to"></use></svg>
             </a>
 
             <!--
